fix improper word wrap in product grid

--- a/imports/plugins/included/default-theme/client/styles/products/productGrid.less
+++ b/imports/plugins/included/default-theme/client/styles/products/productGrid.less
@@ -33,6 +33,7 @@
   font-size: @font-size-base;
   font-weight: 400;
   text-align: center;
+  word-break: break-word;
 }
 
 
